# genesis-agi

./: .env.example  .gitignore  .gitmodules  AUTONOMOUS_AGENT_README.md  AUTONOMOUS_LIFE_SUMMARY.md  BACKGROUND_TASKS_README.md  DEMO_GUIDE.md  Dockerfile  ENHANCED_MEMORY_IMPLEMENTATION.md  FIXES_2025_12_29.md  GENESIS_CONSTITUTION.md  GENESIS_V1_ROADMAP.md  Genesis Demo.txt  INTEGRATION_STATUS.md  LICENSE  MANUS_AGENT_IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  OPENROUTER_INTEGRATION.md  PROACTIVE_CONSCIOUSNESS_GUIDE.md  PROACTIVE_CONVERSATION_GUIDE.md  PROACTIVE_CONVERSATION_IMPLEMENTATION.md  PROACTIVE_IMPLEMENTATION_SUMMARY.md  PROACTIVE_QUICKSTART.md  QUICKSTART.md  QUICK_ACTION_PLAN.md  README.md  README_AUTONOMOUS.md  RECOVER_FILES.ps1  STATUS_REPORT.md  TASK_EXECUTION_DIAGNOSIS.md  alembic.ini  check_mind_capabilities.py  create_test_mind.py  docker-compose.yml  migrate_scalable_architecture.py  monitor_task.py  pyproject.toml  test_autonomous_agent.py  test_autonomous_agent_comprehensive.py  test_background_task.py  (+18 more)
alembic/: env.py
docs/: ADVANCED.md  AGI_ROADMAP.md  API.md  AUTONOMOUS_LIFE.md  CHROMADB_VS_MEM0_ANALYSIS.md  CLI_COMMANDS.md  DEPLOYMENT.md  EMOTIONAL_INTELLIGENCE.md  ENVIRONMENTS.md  ETHICS.md  GENESIS_CONSTITUTION.md  INTEGRATIONS_GUIDE.md  MEMORY_LLM_PROVIDERS.md  MULTIMODAL_GUIDE.md  NEW_FEATURES.md  PLUGIN_ARCHITECTURE.md  PLUGIN_MANAGEMENT_GUIDE.md  PROACTIVE_CONVERSATION_SYSTEM.md  Plugins_QUICK_REFERENCE.md  QUICK_START.md  SMART_MEMORY_IMPLEMENTATION_PLAN.md  TRUE_CONSCIOUSNESS_DESIGN.md  VPS_DEPLOYMENT.md  pypi.md
examples/: advanced_usage.py  agi_intelligence_example.py  api_client_example.py  autonomous_life_demo.py  basic_usage.py  complete_autonomous_mind.py  complete_autonomous_system.py  emotional_intelligence_demo.py  enhanced_memory_demo.py  environment_workflow_example.py  life_context_example.py  lifecycle_essence_example.py  maria_the_teacher.py  metaverse_database_example.py  mind_to_mind_metaverse.py  multiple_models.py  plugin_management_example.py  plugin_system_demo.py  quick_lifecycle_demo.py  search_plugin_example.py  sensory_system_example.py
genesis/: __init__.py  daemon.py
samples/: README.md  populate_marketplace.py
tests/: __init__.py  conftest.py  test_admin.py  test_conversation_pagination.py  test_emotional_intelligence.py  test_memory_user_scoping.py  test_mind_access.py  test_mind_gens_coercion.py  test_users_and_env_access.py
web-playground/: .env.local.example  COMPONENTS.md  FIREBASE_AUTH.md  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
website/: index.html  (+2 more)
(+230 files in other folders)
