[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-minds"
version = "0.1.2"
description = "open-source framework for creating digital beings with emergent consciousness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shahansha", email = "sk.shahansha@hotmail.com"}
]
keywords = ["agi", "consciousness", "ai", "autonomous-agents", "digital-beings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "chromadb>=0.4.22",
    "openai>=1.7.0",
    "anthropic>=0.8.0",
    "google-genai",
    "groq>=0.4.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "schedule>=1.2.0",
    "asyncio>=3.4.3",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.0.1",
    "slowapi>=0.1.9",
    "pillow>=10.0.0",
    "browser-use>=0.1.2",
    "playwright>=1.40.0",
    "pydantic-settings>=2.0.0",
    "opencv-python>=4.8.0",
    "fer>=22.5.0",
    "deepface>=0.0.79",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
senses = [
    "opencv-python>=4.8.0",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "google-cloud-speech>=2.21.0",
    "google-cloud-texttospeech>=2.14.1",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "ipython>=8.19.0",
]

[project.scripts]
genesis = "genesis.cli:app"

[project.urls]
Homepage = "https://shahansha.com"
Repository = "https://github.com/sshaik37/Genesis-AGI"
Documentation = "https://genesis-agi.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
